assets/sass/fractal6.scss
/* ... */
.pending-border {
    border: 2px dashed var(--border-color-light) !important;
}

.docToolbar {
    .button {
        background-color: var(--background-evidence) !important;
        &.is-active {
            color: var(--link) !important;
            border: 1px solid var(--link);
        }
    }
}

.doc-container {
    .subtitle {
        color: var(--text-light);
        font-weight: 600;
        font-size: 1.25rem;
    }

    .level {
        margin-bottom: 1rem;
    }

    .is-small .docToolbar {
        .button {
            font-size: 0.6rem !important;
        }
    }

    & > a, & > div > a, .content a {
        color: var(--blue);
    }
}

.aboutDoc {
    .subtitle {
        a:hover, a:hover .content {
            color: var(--link2) !important;
        }
    }
}

.subSection {
    //padding-right: 1.5rem;
    //padding-left: 1.5rem;
    .label {
        color: var(--is-highlight2);
        //border-bottom: 1px solid var(--border-color-light);
    }

    &:not(last-child) {
        margin-bottom: 1rem;
    }
}

//
// Tension/Blob Page
//

.tensionTitle > .is-human,
.tensionTitle.is-human {
    color: var(--text);
    font-size: 2rem !important;
    // Zen font
    //font-size: 2.5rem !important;
}

.tensionSubtitle {
    font-size: 14px !important;
    & > span:not(:last-child) {
        margin-right: 12px !important;
    }

    .tag {
        height: 1.7rem !important;
    }
}

.comments {
    .media + .media {
        margin-top: 1.5rem !important;
        border: 0 !important;
    }

    .message:not(.commentInput) {
        border-radius: 8px !important;
        .message-header {
            //padding-top: 0.5rem;
            //padding-bottom: 0.5rem;
            border-radius: 8px 8px 0 0 !important;
            display: inherit !important;
            font-size: 14px !important;
            font-weight: 500 !important;
            border-bottom: solid 1px var(--border-color-light);
            a {
                text-decoration: none !important;
                font-weight: 600 !important;
                &:hover { text-decoration: underline !important; }
            }
            li a {
                font-weight: 500 !important;
            }

            .dropdown-trigger {
                padding-top: 3px;
            }

            .dropdown-menu {
                margin-top: -3px;
                margin-right: -$size-small !important;
            }

            .ellipsis {
                opacity: 0.75 !important;
                &:hover { opacity: 1 !important; }
            }
        }

        .message-body {
            font-size: 15px;
        }
    }
}

.panel .message-body {
    // Draft Card
    padding: 1rem 0.9rem !important;
    font-size: 15px;
}

.commentInput {
    .message-header {
        font-weight: 500 !important;
        border: 0 !important;
        padding: 0 0.75rem !important;

        a:hover {
            text-decoration: none !important;
        }
    }
    .message-body {
        padding: 0.75rem 0.75rem !important;
    }
    .textarea {
        resize: both;
    }
}

.commentHeader {
    width: 100%;
    .level-right {
        font-size: 15px;
        font-family: "Times New Roman", Times, serif !important;
        *:not(:last-child) {
            padding-left: 0.6rem;
            padding-right: 0.6rem;
            font-weight: 600;
            color: var(--is-discrete);
            &:hover {
                background: var(--background-evidence);
                color: var(--is-highlight);
            }
        }
        //div:last-child {
        //    margin-left: 0.5rem;
        //    padding-left: 0.75rem;
        //    display: flex;
        //    align-items: center;
        //}
    }
}

#cardPanel {
    border-left: 1px solid var(--hbc);
    .comments, .main-block, .header-block {
        background: var(--bbc);
    }

    .media {
        padding: 0 0rem !important;
    }

    .message-header {
        padding-top: 0.3rem;
        padding-bottom: 0.3rem;
        .dropdown-trigger {
            padding-top: 8px;
        }
    }

    .message-body {
    }

    // Ignore has-arrow-left
    .has-arrow-left:after, .has-arrow-left:before {
        display: none;
    }

}

.panel-background {
    opacity: 0.75;
}

.actionComment {
    align-items: center;
    margin-left: 1rem !important;
    @include tablet {
        margin-left: 5rem !important;
    }
    font-size: 14px !important;

    .media-left {
        position: relative;
        top: 2px;
    }
}
#cardPanel {
    .actionComment {
        margin-left: 1rem !important;
    }
}

.tensionSidePane {
    //margin-top: 2.25rem !important;

    .media:first-child {
        border-top: 1px solid var(--border-color-light) !important;
        padding-top: 1rem !important;
    }

    .media {
        border-top: 1px solid var(--border-color-light) !important;
        margin: 0;
        padding-bottom: 2rem;
    }

    .media-content {
        font-size: 14px !important;
        .subtitle {
            font-size: 13px !important;
            font-weight: 600 !important;
            color: var(--is-discrete);
            margin-bottom: 1rem !important;
        }
    }


    > .level {
        justify-content: start;
        .level-left {
            font-size: 0.75rem;
            font-weight: bold;
            color: var(--is-hint);
            flex-basis: 33%;
            padding-right: var(--size-small);
        }
        .level-item {
            flex-grow: 0 !important;
            justify-content: left;
        }

        .help {
            margin-top: 0;
        }
    }
}

.dropList {
    position: absolute;
    background: var(--background-evidence);
    border: 1px solid var(--grey-light);
    max-width: 450px;
    z-index: 25;
    @include tablet {
        min-width: 300px;
    }
    @include touch {
        min-width: 200px;
    }

    .control {
        .icon { color: var(--grey) !important; }
    }

    &.is-right {
        left: auto;
        right: 0;
    }
}
/* ... */

